--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "typescript": "^3.9.2"
   },
   "dependencies": {
+    "@babel/runtime": "^7.10.1",
     "classnames": "2.x",
     "raf": "^3.4.1",
     "rc-dropdown": "^3.1.0",
