--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "now-build": "npm run build",
     "lint": "eslint src/ examples/ --ext .tsx,.ts,.jsx,.js",
     "compile:style": "lessc --js assets/index.less assets/index.css",
-    "prepublishOnly": "npm run lint && npm run test && npm run compile && np --no-cleanup --yolo --no-publish"
+    "prepublishOnly": "npm run lint && npm run test && npm run compile && np --no-cleanup --yolo --no-publish --any-branch"
   },
   "devDependencies": {
     "@types/classnames": "^2.2.10",
