--- a/package.json
+++ b/package.json
@@ -79,5 +79,9 @@
     "rc-menu": "^8.6.1",
     "rc-resize-observer": "^0.2.1",
     "rc-util": "^5.0.0"
+  },
+  "peerDependencies": {
+    "react": ">=16.9.0",
+    "react-dom": ">=16.9.0"
   }
 }
