--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
     "paths": {
       "@/*": ["src/*"],
       "@@/*": ["src/.umi/*"],
-      "rc-tabs": ["src/index.tsx"]
+      "rc-tabs": ["src/"]
     }
   }
 }
