--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
     "@babel/runtime": "^7.11.2",
     "classnames": "2.x",
     "rc-dropdown": "^3.1.3",
-    "rc-menu": "^8.6.1",
+    "rc-menu": "^9.0.0-alpha.7",
     "rc-resize-observer": "^1.0.0",
     "rc-util": "^5.5.0"
   },
