--- a/package.json
+++ b/package.json
@@ -79,7 +79,8 @@
     "rc-dropdown": "^3.2.0",
     "rc-menu": "^9.0.0",
     "rc-resize-observer": "^1.0.0",
-    "rc-util": "^5.5.0"
+    "rc-util": "^5.5.0",
+    "react-to-string": "^0.1.1"
   },
   "peerDependencies": {
     "react": ">=16.9.0",
