--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "classnames": "2.x",
     "rc-dropdown": "~4.0.0",
     "rc-menu": "~9.6.0",
+    "rc-motion": "^2.6.2",
     "rc-resize-observer": "^1.0.0",
     "rc-util": "^5.5.0"
   },
