--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rc-tabs",
-  "version": "12.0.0-alpha.0",
+  "version": "12.0.0-alpha.1",
   "description": "tabs ui component for react",
   "engines": {
     "node": ">=8.x"
@@ -41,6 +41,8 @@
     "prepublishOnly": "npm run lint && npm run test && npm run compile && np --yolo --no-publish"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^12.0.0",
     "@types/classnames": "^2.2.10",
     "@types/enzyme": "^3.10.5",
     "@types/jest": "^25.2.3",
@@ -78,6 +80,7 @@
     "classnames": "2.x",
     "rc-dropdown": "~4.0.0",
     "rc-menu": "~9.6.0",
+    "rc-motion": "^2.6.2",
     "rc-resize-observer": "^1.0.0",
     "rc-util": "^5.5.0"
   },
