--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rc-tabs",
+  "name": "rc-tabs-2",
   "version": "12.1.0-alpha.1",
   "description": "tabs ui component for react",
   "engines": {
