--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rc-tabs-2",
+  "name": "rc-tabs",
   "version": "12.1.0-alpha.1",
   "description": "tabs ui component for react",
   "engines": {
@@ -69,7 +69,6 @@
     "react-dnd": "^10.0.0",
     "react-dnd-html5-backend": "^10.0.0",
     "react-dom": "^16.0.0",
-    "react-router": "^3.0.0",
     "react-sticky": "^6.0.3",
     "react-test-renderer": "^16.0.0",
     "sortablejs": "^1.7.0",
