--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@testing-library/react": "^12.0.0",
     "@types/classnames": "^2.2.10",
     "@types/enzyme": "^3.10.5",
+    "@types/keyv": "3.1.4",
     "@types/jest": "^25.2.3",
     "@types/react": "^17.0.14",
     "@types/react-dom": "^16.9.8",
@@ -81,7 +82,7 @@
     "rc-menu": "~9.6.0",
     "rc-motion": "^2.6.2",
     "rc-resize-observer": "^1.0.0",
-    "rc-util": "^5.5.0"
+    "rc-util": "^5.16.0"
   },
   "peerDependencies": {
     "react": ">=16.9.0",
