chore: update tsconfig include

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,5 +23,5 @@
       ]
     }
   },
-  "include": [".dumi/**/*", ".dumirc.ts", "src/**/*"]
+  "include": [".dumi/**/*", ".dumirc.ts", "**/*.ts", "**/*.tsx"]
 }
