--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   },
   "devDependencies": {
     "@rc-component/father-plugin": "^1.0.0",
+    "@rc-component/trigger": "^1.10.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.0.0",
     "@types/classnames": "^2.2.10",
