--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   },
   "devDependencies": {
     "@rc-component/father-plugin": "^1.0.0",
+    "@rc-component/trigger": "^1.10.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.0.0",
     "@types/classnames": "^2.2.10",
@@ -74,7 +75,7 @@
   "dependencies": {
     "@babel/runtime": "^7.11.2",
     "classnames": "2.x",
-    "rc-dropdown": "~4.0.0",
+    "rc-dropdown": "~4.1.0",
     "rc-menu": "~9.8.0",
     "rc-motion": "^2.6.2",
     "rc-resize-observer": "^1.0.0",
