--- a/package.json
+++ b/package.json
@@ -2,42 +2,48 @@
   "name": "rc-tabs",
   "version": "12.14.0",
   "description": "tabs ui component for react",
-  "engines": {
-    "node": ">=8.x"
-  },
   "keywords": [
     "react",
     "react-component",
     "react-tabs"
   ],
+  "homepage": "http://github.com/react-component/tabs",
+  "bugs": {
+    "url": "http://github.com/react-component/tabs/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:react-component/tabs.git"
+  },
+  "license": "MIT",
+  "author": "yiminghe@gmail.com",
+  "main": "./lib/index",
+  "module": "./es/index",
   "files": [
     "lib",
     "es",
     "assets/index.css"
   ],
-  "main": "./lib/index",
-  "module": "./es/index",
-  "homepage": "http://github.com/react-component/tabs",
-  "author": "yiminghe@gmail.com",
-  "repository": {
-    "type": "git",
-    "url": "git@github.com:react-component/tabs.git"
-  },
-  "bugs": {
-    "url": "http://github.com/react-component/tabs/issues"
-  },
-  "license": "MIT",
   "scripts": {
-    "start": "dumi dev",
     "build": "dumi build",
-    "docs:deploy": "gh-pages -d .doc",
     "compile": "father build && npm run compile:style",
-    "test": "rc-test",
-    "coverage": "father test --coverage",
-    "now-build": "npm run build",
-    "lint": "eslint src/ docs/examples/ --ext .tsx,.ts,.jsx,.js",
     "compile:style": "lessc --js assets/index.less assets/index.css",
-    "prepublishOnly": "npm run lint && npm run test && npm run compile && np --yolo --no-publish"
+    "coverage": "father test --coverage",
+    "docs:deploy": "gh-pages -d .doc",
+    "lint": "eslint src/ docs/examples/ --ext .tsx,.ts,.jsx,.js",
+    "now-build": "npm run build",
+    "prepublishOnly": "npm run lint && npm run test && npm run compile && np --yolo --no-publish",
+    "start": "dumi dev",
+    "test": "rc-test"
+  },
+  "dependencies": {
+    "@babel/runtime": "^7.11.2",
+    "classnames": "2.x",
+    "rc-dropdown": "~4.1.0",
+    "rc-menu": "~9.12.0",
+    "rc-motion": "^2.6.2",
+    "rc-resize-observer": "^1.0.0",
+    "rc-util": "^5.34.1"
   },
   "devDependencies": {
     "@rc-component/father-plugin": "^1.0.0",
@@ -74,17 +80,11 @@
     "sortablejs": "^1.7.0",
     "typescript": "^4.0.5"
   },
-  "dependencies": {
-    "@babel/runtime": "^7.11.2",
-    "classnames": "2.x",
-    "rc-dropdown": "~4.1.0",
-    "rc-menu": "~9.12.0",
-    "rc-motion": "^2.6.2",
-    "rc-resize-observer": "^1.0.0",
-    "rc-util": "^5.34.1"
-  },
   "peerDependencies": {
     "react": ">=16.9.0",
     "react-dom": ">=16.9.0"
+  },
+  "engines": {
+    "node": ">=8.x"
   }
 }
