--- a/package.json
+++ b/package.json
@@ -38,12 +38,12 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.11.2",
-    "classnames": "2.x",
+    "@rc-component/motion": "^1.0.0",
+    "@rc-component/resize-observer": "^1.0.0",
+    "@rc-component/util": "^1.2.0",
+    "classnames": "^2.5.1",
     "rc-dropdown": "~4.2.0",
-    "rc-menu": "~9.16.0",
-    "rc-motion": "^2.6.2",
-    "rc-resize-observer": "^1.0.0",
-    "rc-util": "^5.34.1"
+    "rc-menu": "~9.16.0"
   },
   "devDependencies": {
     "@rc-component/father-plugin": "^1.0.0",
