--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "rc-tabs",
-  "version": "15.5.0",
+  "name": "@rc-component/tabs",
+  "version": "1.1.0",
   "description": "tabs ui component for react",
   "keywords": [
     "react",
