--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "rc-tabs",
-  "version": "15.5.1",
+  "name": "@rc-component/tabs",
+  "version": "1.0.0",
   "description": "tabs ui component for react",
   "keywords": [
     "react",
@@ -32,21 +32,22 @@
     "docs:deploy": "gh-pages -d .doc",
     "lint": "eslint src/ docs/examples/ --ext .tsx,.ts,.jsx,.js",
     "now-build": "npm run build",
-    "prepublishOnly": "npm run lint && npm run test && npm run compile && np --yolo --no-publish",
+    "prepublishOnly": "npm run lint && npm run test && npm run compile && rc-np",
     "start": "dumi dev",
     "test": "rc-test"
   },
   "dependencies": {
-    "@babel/runtime": "^7.11.2",
+    "@rc-component/resize-observer": "^1.0.0",
+    "@rc-component/util": "^1.2.0",
+    "@rc-component/motion": "^1.1.3",
     "classnames": "2.x",
     "rc-dropdown": "~4.2.0",
     "rc-menu": "~9.16.0",
-    "rc-motion": "^2.6.2",
-    "rc-resize-observer": "^1.0.0",
-    "rc-util": "^5.34.1"
+    "rc-motion": "^2.6.2"
   },
   "devDependencies": {
-    "@rc-component/father-plugin": "^1.0.0",
+    "@rc-component/father-plugin": "^2.0.0",
+    "@rc-component/np": "^1.0.3",
     "@rc-component/trigger": "^2.0.0",
     "@testing-library/jest-dom": "^6.1.4",
     "@testing-library/react": "^16.0.1",
@@ -70,7 +71,6 @@
     "history": "^5.3.0",
     "immutability-helper": "^3.0.1",
     "less": "^4.1.3",
-    "np": "^10.0.2",
     "preact-compat": "^3.16.0",
     "rc-test": "^7.0.14",
     "react": "^18.0.0",
