--- a/package.json
+++ b/package.json
@@ -41,8 +41,8 @@
     "@rc-component/util": "^1.2.0",
     "@rc-component/motion": "^1.1.3",
     "classnames": "2.x",
-    "rc-dropdown": "~4.2.0",
-    "rc-menu": "~9.16.0"
+    "@rc-component/dropdown": "~1.0.0",
+    "@rc-component/menu": "~1.0.0"
   },
   "devDependencies": {
     "@rc-component/father-plugin": "^2.0.0",
