--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "now-build": "npm run build",
     "prepublishOnly": "npm run lint && npm run test && npm run compile && rc-np",
     "start": "dumi dev",
-    "test": "rc-test"
+    "test": "rc-test",
+    "prepare": "husky && dumi setup"
   },
   "dependencies": {
     "@rc-component/resize-observer": "^1.0.0",
@@ -58,7 +59,6 @@
     "@types/react": "^18.2.42",
     "@types/react-dom": "^18.0.11",
     "@umijs/fabric": "^4.0.1",
-    "coveralls": "^3.0.6",
     "cross-env": "^7.0.2",
     "dumi": "^2.0.0",
     "eslint": "^8.54.0",
@@ -68,9 +68,12 @@
     "father": "^4.0.0",
     "gh-pages": "^6.1.0",
     "history": "^5.3.0",
+    "husky": "^9.1.7",
     "immutability-helper": "^3.0.1",
     "less": "^4.1.3",
+    "lint-staged": "^15.5.0",
     "preact-compat": "^3.16.0",
+    "prettier": "^3.5.3",
     "rc-test": "^7.0.14",
     "react": "^18.0.0",
     "react-dnd": "^10.0.0",
@@ -83,6 +86,9 @@
   "peerDependencies": {
     "react": ">=16.9.0",
     "react-dom": ">=16.9.0"
+  },
+  "lint-staged": {
+    "*": "prettier --write --ignore-unknown"
   },
   "engines": {
     "node": ">=8.x"
