--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "@rc-component/menu": "~1.0.0"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.59.7",
+    "@typescript-eslint/parser": "^5.59.7",
     "@rc-component/father-plugin": "^2.0.0",
     "@rc-component/np": "^1.0.3",
     "@rc-component/trigger": "^3.0.0",
