--- a/package.json
+++ b/package.json
@@ -34,8 +34,7 @@
     "now-build": "npm run build",
     "prepublishOnly": "npm run lint && npm run test && npm run compile && np --yolo --no-publish",
     "start": "dumi dev",
-    "test": "rc-test",
-    "prepare": "husky && dumi setup"
+    "test": "rc-test"
   },
   "dependencies": {
     "@babel/runtime": "^7.11.2",
@@ -65,7 +64,6 @@
     "eslint-plugin-unicorn": "^56.0.1",
     "father": "^4.0.0",
     "gh-pages": "^6.1.0",
-    "husky": "^9.1.7",
     "less": "^4.1.3",
     "np": "^10.0.2",
     "preact-compat": "^3.16.0",
@@ -80,9 +78,6 @@
   "peerDependencies": {
     "react": ">=16.9.0",
     "react-dom": ">=16.9.0"
-  },
-  "lint-staged": {
-    "*": "prettier --write --ignore-unknown"
   },
   "engines": {
     "node": ">=8.x"
