--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "now-build": "npm run build",
     "prepublishOnly": "npm run lint && npm run test && npm run compile && np --yolo --no-publish --branch=antd-5.x",
     "start": "dumi dev",
-    "test": "rc-test"
+    "test": "rc-test",
+    "prepare": "husky"
   },
   "dependencies": {
     "@babel/runtime": "^7.11.2",
@@ -68,10 +69,13 @@
     "father": "^4.0.0",
     "gh-pages": "^6.1.0",
     "history": "^5.3.0",
+    "husky": "^9.1.7",
     "immutability-helper": "^3.0.1",
     "less": "^4.1.3",
+    "lint-staged": "^15.5.1",
     "np": "^10.0.2",
     "preact-compat": "^3.16.0",
+    "prettier": "^3.5.3",
     "rc-test": "^7.0.14",
     "react": "^18.0.0",
     "react-dnd": "^10.0.0",
@@ -87,5 +91,11 @@
   },
   "engines": {
     "node": ">=8.x"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ]
   }
 }
