--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "compile": "father build && npm run compile:style",
     "compile:style": "lessc --js assets/index.less assets/index.css",
     "coverage": "father test --coverage",
-    "docs:deploy": "gh-pages -d .doc",
+    "docs:deploy": "gh-pages -d dist",
     "lint": "eslint src/ docs/examples/ --ext .tsx,.ts,.jsx,.js",
     "now-build": "npm run build",
     "prepublishOnly": "npm run lint && npm run test && npm run compile && rc-np",
