--- a/package.json
+++ b/package.json
@@ -38,27 +38,27 @@
     "prepare": "husky && dumi setup"
   },
   "dependencies": {
+    "@rc-component/dropdown": "~1.0.0",
+    "@rc-component/menu": "~1.1.0",
+    "@rc-component/motion": "^1.1.3",
     "@rc-component/resize-observer": "^1.0.0",
     "@rc-component/util": "^1.3.0",
-    "@rc-component/motion": "^1.1.3",
-    "classnames": "2.x",
-    "@rc-component/dropdown": "~1.0.0",
-    "@rc-component/menu": "~1.1.0"
+    "clsx": "^2.1.1"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.59.7",
-    "@typescript-eslint/parser": "^8.31.1",
     "@rc-component/father-plugin": "^2.0.0",
     "@rc-component/np": "^1.0.3",
     "@rc-component/trigger": "^3.0.0",
     "@testing-library/jest-dom": "^6.1.4",
     "@testing-library/react": "^16.0.1",
     "@testing-library/user-event": "^14.5.2",
-    "@types/classnames": "^2.2.10",
     "@types/enzyme": "^3.10.5",
     "@types/jest": "^29.4.0",
+    "@types/node": "^24.5.2",
     "@types/react": "^18.2.42",
     "@types/react-dom": "^19.1.3",
+    "@typescript-eslint/eslint-plugin": "^5.59.7",
+    "@typescript-eslint/parser": "^8.31.1",
     "@umijs/fabric": "^4.0.1",
     "cross-env": "^7.0.2",
     "dumi": "^2.0.0",
